--- a/app/assets/stylesheets/categories.css.scss
+++ b/app/assets/stylesheets/categories.css.scss
@@ -1,6 +1,11 @@
 .category-empty {
   margin-top: 20px;
 }
+
+.product-list .product-list-button {
+  text-align: center;
+}
+
 .product-list.list li .right-block {
   text-align: left;
 }
