open modal window with cart line_items when product is added to cart

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -22,6 +22,8 @@
   %body
     .content-wrapper
       = render 'layouts/flash_messages'
+      .modal-wrap
+        = render 'layouts/cart_modal'
       = render 'layouts/header'
       = render 'layouts/navbar'
       = render 'layouts/breadcrumbs'
