--- a/app/assets/stylesheets/orders.css.scss
+++ b/app/assets/stylesheets/orders.css.scss
@@ -2,6 +2,14 @@ div#left_column {
   margin-top: 34px;
 }
 
+li.divider {
+  height: 1px;
+  margin: 9px 0;
+  overflow: hidden;
+  background-color: #e5e5e5;
+}
+
+
 .orders-cart-sidebar .product-price {
   font-size: 16px;
   line-height: 25px;
