--- a/app/views/line_items/create.js.haml
+++ b/app/views/line_items/create.js.haml
@@ -1,3 +1,3 @@
 $('#cart-block').html("#{j render(@cart)}");
-
-$('#cart-block').effect('highlight', 2000);
+$('.modal-wrap').html("#{j render('layouts/cart_modal')}");
+$('#cart-modal').modal('show')
