--- a/app/views/categories/_products_list.html.haml
+++ b/app/views/categories/_products_list.html.haml
@@ -33,4 +33,5 @@
               = truncate(product.description, length: 180, separator: ' ', escape: false)
         .product-list-button
           = link_to 'Подробнее', category_product_path(product.category, product), class: 'btn btn-cart-orange'
-= paginate @products, :theme => 'twitter-bootstrap-3', remote: true
+%div
+  = paginate @products, :theme => 'twitter-bootstrap-3', remote: true
