--- a/app/views/categories/show.html.haml
+++ b/app/views/categories/show.html.haml
@@ -21,3 +21,5 @@
           / PRODUCT LIST
           %ul.row.product-list.grid
             = render 'products_list'
+            %div
+              = paginate @products, :theme => 'twitter-bootstrap-3', remote: true
