show 'thank you' modal when order is created

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -24,6 +24,7 @@
       = render 'layouts/flash_messages'
       .modal-wrap
         = render 'layouts/cart_modal'
+        = render 'layouts/thankyou_modal'
       = render 'layouts/header'
       = render 'layouts/navbar'
       = render 'layouts/breadcrumbs'
