display product page sidebar at the bottom (on mobile devices)

--- a/app/views/products/_sidebar.html.haml
+++ b/app/views/products/_sidebar.html.haml
@@ -1,4 +1,4 @@
-#left_column.column.col-xs-12.col-sm-3
+#left_column.column.col-xs-12.col-sm-3.pull-left
   / block category
   .block.left-module
     %p.title_block.text-uppercase Разделы
