--- a/app/assets/stylesheets/product.css.scss
+++ b/app/assets/stylesheets/product.css.scss
@@ -1,3 +1,7 @@
+.product-center-column {
+  margin-top: 34px;
+}
+
 /* Sidebar discount */
 .product-list li .price-percent-reduction2 {
   line-height: 32px;
