--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -6,7 +6,7 @@
   #columns.container
     / row
     .row
-      #center_column.center_column.col-xs-12.col-sm-9.pull-right
+      #center_column.center_column.product-center-column.col-xs-12.col-sm-9.pull-right
         / Product
         #product
           .primary-box.row
